feat: update several things; refactor contract to game

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           # list of Docker images to use as base name for tags
           images: |
-            ghcr.io/ehwplus/be-contract
+            ghcr.io/equati-de/be-game
           # generate Docker tags based on the following events/attributes
           tags: |
             type=match,pattern=\d+.\d+.\d+,value=${{ steps.info.outputs.version }}
@@ -53,5 +53,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }}, ghcr.io/ehwplus/be-contract:latest
+          tags: ${{ steps.meta.outputs.tags }}, ghcr.io/equati-de/be-game:latest
           labels: ${{ steps.meta.outputs.labels }}
