feat(stack.yaml): add network to deployments

--- a/stack.yaml
+++ b/stack.yaml
@@ -1,26 +1,11 @@
 version: "3.7"
 
 services:
-#  caddy2:
-#    image: caddy:2.5.2
-#    ports:
-#      - "80:80"
-#      - "443:443"
-#    volumes:
-#      - caddy_data:/data
-#      - caddy_config:/config
-#    configs:
-#      - source: Caddyfile-ehwplus
-#        target: /etc/caddy/Caddyfile
-#    deploy:
-#      restart_policy:
-#        condition: on-failure
-#        max_attempts: 5
-#        delay: 5s
-#      replicas: 1
-
   be-equati-game:
     image: ghcr.io/equati-de/be-game:latest
+    networks:
+      - equati_api
+      - traefik-public
     ports:
       - "8080:8080"
     environment:
@@ -65,6 +50,8 @@ services:
 
   pg-equati-game:
     image: postgres:14.5
+    networks:
+      - equati_api
     volumes:
       - dbdata:/var/lib/postgresql/data
     environment:
@@ -86,6 +73,8 @@ services:
 
   pgadmin:
     image: dpage/pgadmin4:6.14
+    networks:
+      - equati_api
     ports:
       - "5555:80"
     environment:
@@ -106,6 +95,8 @@ services:
 
   grafana:
     image: grafana/grafana:9.18
+    networks:
+      - equati_api
     ports:
       - "5656:3000"
     volumes:
